# EraMatch_AI_Features_Trials

./: .gitattributes  .gitignore  Anas-Ah25_recruiting_package.json  README.md  auto_pull.py  metadata.json  models.py  performance_history.md  pull_models.bat  requirements.txt  services.py  streamlit_app.py
5. CV Analysis/EraParse/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
5. CV Analysis/EraParse/artifacts/: audit_report.json  debug_250.jsonl  debug_50.jsonl  id_test.jsonl  manifest_summary.json  template_ood_test.jsonl  validation.jsonl
5. CV Analysis/EraParse/docs/: ARCHITECTURE_AND_SCIENCE.md  ATS_BASELINE.md  ATS_BASELINE_RESULTS.md  BASELINE_MATRIX.md  DATASET_CONTRACT.md  DECISIONS_AND_CORRECTIONS.md  EVALUATION_PROTOCOL.md  MODAL_COST_AUDIT.md  MODAL_EXECUTION.md  MODEL_CATALOG.md  NEXT_MODEL_ACTION_PLAN.md  NEXT_STAGE_EXPERIMENT_MATRIX.md  PHASED_TASK_PLAN.md  PRIOR_KAGGLE_TRIALS.md  PROJECT_PLAN.md  QWEN3_FROZEN_RESULTS.md  REARCHITECTED_RESEARCH_FLOW.md  RESULTS_AND_PARETO.md  SECOND_CONTRIBUTION_PLAN.md  SG_ESE_STAGE_LOG.md  SOURCES.md  THESIS_DESIGN.md  TRIAL_2_INITIAL_RESULTS.md  TRIAL_3_DIRECT_VISION.md  TRIAL_RUNBOOK.md  VERSIONS_AND_ENVIRONMENTS.md  WORK_PACKAGES.md
5. CV Analysis/EraParse/modal_apps/: constrained_infer.py  docling_representations.py  donut_train.py  donut_trial.py  gemma_adapter_infer.py  gemma_finetune.py  gemma_vllm_latency.py  mapper_trial.py  nuextract3_quant_trial.py  nuextract3_trial.py  nuextract3_vllm_trial.py  nuextract_15_finetune.py  nuextract_adapter_infer.py  nuextract_tiny_finetune.py  nuextract_trial.py  paddleocr_vl_trial.py  qwen3_trial.py  (+4 more)
(+1153 files in other folders)
